# remote-research

./: main.py  mcp_chatbot.py  pyproject.toml  requirements.txt  research_server.py  server_config.json
papers/robots/: papers_info.json
